[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/PendulumWrite.gd" type="Script" id=1]
[ext_resource path="res://art/Pendulum/Pendulum_Base_2.png" type="Texture" id=2]
[ext_resource path="res://art/Pendulum/Pendulum_Pen_2.png" type="Texture" id=3]
[ext_resource path="res://art/Pendulum/CompassSmall.png" type="Texture" id=4]
[ext_resource path="res://art/UI/Button_Left.png" type="Texture" id=5]
[ext_resource path="res://art/UI/Button_Left_Pressed.png" type="Texture" id=6]
[ext_resource path="res://art/UI/Restart_Button.png" type="Texture" id=7]
[ext_resource path="res://art/UI/Menu_Button.png" type="Texture" id=8]
[ext_resource path="res://art/Pendulum/Compass.png" type="Texture" id=9]
[ext_resource path="res://art/UI/Button_Right.png" type="Texture" id=10]
[ext_resource path="res://art/Pendulum/Pendulum_Hinge_2.png" type="Texture" id=11]
[ext_resource path="res://art/UI/Button_Right_Pressed.png" type="Texture" id=12]
[ext_resource path="res://art/Pendulum/Compass_Needle.png" type="Texture" id=13]
[ext_resource path="res://scenes/assets/Sprites/PendulumInk.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/assets/Sprites/SecondArm.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/assets/Sprites/FirstArm.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/assets/Levels/LevelBase.tscn" type="PackedScene" id=17]

[sub_resource type="World" id=1]

[node name="Pendulum" type="Node"]
script = ExtResource( 1 )
firstArm = ExtResource( 16 )
secondArm = ExtResource( 15 )
ink = ExtResource( 14 )
write_scene = ExtResource( 17 )
write_level = -1
num_rotations = 1.002

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 720.0
margin_bottom = 1080.0

[node name="PendulumBase" type="Node2D" parent="."]
visible = false
position = Vector2( 360, 540 )
scale = Vector2( 0.25, 0.25 )

[node name="BaseArm" type="Node2D" parent="PendulumBase"]

[node name="PendulumHinge" type="Node2D" parent="PendulumBase"]
position = Vector2( 0, 252 )

[node name="HingeArm" type="Node2D" parent="PendulumBase/PendulumHinge"]

[node name="PendulumPen" type="Node2D" parent="PendulumBase/PendulumHinge"]
position = Vector2( 0, 196 )

[node name="PenSprite" type="Sprite" parent="PendulumBase/PendulumHinge/PendulumPen"]
scale = Vector2( 0.125, 0.125 )
z_index = 7
texture = ExtResource( 3 )

[node name="HingeSprite" type="Sprite" parent="PendulumBase/PendulumHinge"]
scale = Vector2( 0.125, 0.125 )
z_index = 5
texture = ExtResource( 11 )

[node name="BaseSprite" type="Sprite" parent="PendulumBase"]
scale = Vector2( 0.25, 0.25 )
z_index = 3
texture = ExtResource( 2 )

[node name="LeftButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( -228, 866 )
scale = Vector2( 0.5, 0.5 )
z_index = 3
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="RightButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 436, 866 )
scale = Vector2( 0.5, 0.5 )
z_index = 3
normal = ExtResource( 10 )
pressed = ExtResource( 12 )

[node name="InkHolder" type="Node2D" parent="."]
z_index = 2

[node name="Compass" type="Node2D" parent="."]
visible = false
position = Vector2( 360, 652 )

[node name="CompassSprite" type="Sprite" parent="Compass"]
visible = false
scale = Vector2( 0.188, 0.188 )
z_index = 8
texture = ExtResource( 9 )

[node name="CompassSmall" type="Sprite" parent="Compass"]
position = Vector2( 0.5, -0.5 )
scale = Vector2( 0.25, 0.25 )
z_index = 8
texture = ExtResource( 4 )

[node name="CompassNeedle" type="Node2D" parent="Compass"]

[node name="CompassNeedleSprite" type="Sprite" parent="Compass/CompassNeedle"]
position = Vector2( 0, -48 )
scale = Vector2( 0.25, 0.5 )
z_index = 8
texture = ExtResource( 13 )

[node name="CompassNeedle2" type="Node2D" parent="Compass"]
visible = false

[node name="BaseCompass" type="Node2D" parent="."]
visible = false
position = Vector2( 360, 652 )
scale = Vector2( 2, 2 )

[node name="CompassSprite" type="Sprite" parent="BaseCompass"]
position = Vector2( 0.5, -0.5 )
scale = Vector2( 0.188, 0.188 )
z_index = 8
texture = ExtResource( 9 )

[node name="CompassNeedle2" type="Node2D" parent="BaseCompass"]
visible = false

[node name="CompassNeedleSprite" type="Sprite" parent="BaseCompass/CompassNeedle2"]
position = Vector2( 0, -48 )
scale = Vector2( 0.25, 0.25 )
z_index = 8
texture = ExtResource( 13 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="DetectionContainer" type="ViewportContainer" parent="."]
margin_top = 180.0
margin_right = 720.0
margin_bottom = 900.0

[node name="SubViewport" type="Viewport" parent="DetectionContainer"]
size = Vector2( 720, 720 )
own_world = true
world = SubResource( 1 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="ViewDrawContainer" type="ViewportContainer" parent="."]
margin_top = 180.0
margin_right = 720.0
margin_bottom = 900.0

[node name="SubViewport" type="Viewport" parent="ViewDrawContainer"]
size = Vector2( 720, 720 )
own_world = true
world = SubResource( 1 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="ResetButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 64, 64 )
scale = Vector2( 0.188, 0.188 )
z_index = 3
normal = ExtResource( 7 )

[node name="MenuButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 560, 64 )
scale = Vector2( 0.188, 0.188 )
z_index = 3
normal = ExtResource( 8 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 307.0
margin_right = 347.0
margin_bottom = 40.0
text = "-1"
